feat: 스프린트 미션4 기본요구사항까지 작업