@@ -1,5 +1,6 @@
 package com.sprint.mission.discodeit.repository.jcf;
 
+import com.sprint.mission.discodeit.entity.BaseEntity;
 import com.sprint.mission.discodeit.entity.UpdatableEntity;
 import com.sprint.mission.discodeit.repository.Repository;
 import java.util.LinkedHashMap;
@@ -9,7 +10,7 @@ import java.util.Optional;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
-public abstract class JCFRepository<T extends UpdatableEntity> implements Repository<T> {
+public abstract class JCFRepository<T extends BaseEntity> implements Repository<T> {
     private final Map<UUID,T> data;
 
     protected JCFRepository() {
@@ -30,8 +31,8 @@ public abstract class JCFRepository<T extends UpdatableEntity> implements Reposi
     @Override
     public List<T> findAll() {
         // return new LinkedList<>(data.values());  ---> 수정 가능 리스트 반환
-        // return this.data.values().stream().toList(); ---> 수정 불가 리스트 값 반환 (추가,삭제 안됨)
-        return this.data.values().stream().collect(Collectors.toList()); // ---> 수정 가능 리스트 반환
+        return this.data.values().stream().toList(); //---> 수정 불가 리스트 값 반환 (추가,삭제 안됨)
+       // return this.data.values().stream().collect(Collectors.toList()); // ---> 수정 가능 리스트 반환
     }
 
     @Override
